--- a/config.toml
+++ b/config.toml
@@ -30,5 +30,5 @@ custom_css = ["css/custom.css","css/custom2.css"]
   linkedin = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-near-white"
-  featured_image = "images/lotus2.jpg"
+  featured_image = "images/lotus3a.jpg"
   recent_posts_number = 20
