--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Eckankar in Australia"
-baseURL = "https://example.com"
+baseURL = ""
 languageCode = "en-us"
 theme = "ananke"
 
@@ -21,13 +21,13 @@ custom_css = ["css/custom.css","css/custom2.css"]
 
   favicon = ""
   description = "find Events in Australia."
-  facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
-  instagram = ""
-  youtube = ""
-  github = ""
-  gitlab = ""
-  linkedin = ""
+ # facebook = ""
+ # twitter = "https://twitter.com/GoHugoIO"
+ # instagram = ""
+ # youtube = ""
+  #github = ""
+ # gitlab = ""
+ # linkedin = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-near-white"
   featured_image = "images/lotus3a.jpg"
